# Grtfood-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  railway.json  requirements.txt  seed.py
app/: auth.py  config.py  cron.py  database.py  mail.py  main.py  models.py  schemas.py  ws.py
app/static/: __next.__PAGE__.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
app/static/_next/static/chunks/: 49fae124e96f06ca.css  f9bdf9f7209e072f.js
app/static/_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
app/templates/: pedidos.html  pedidos.tpl
data/: food.db  jobs.sqlite
scripts/: create_admin_auth.py  delete_all_pedidos.py
